--- a/SRproject2.html
+++ b/SRproject2.html
@@ -71,25 +71,25 @@ AFRAME.registerComponent('notebook', {
 
 <a-scene>
   <a-assets>        
-        <a-asste-item id="paintwall" src="SR2-Assets/316967.jpg"></a-asste-item>
-        <a-asste-item id="paintwall2" src="SR2-Assets/paintwall2.jpg"></a-asste-item>
-        <a-asste-item id="paintwall3" src="SR2-Assets/paintwall3.jpg"></a-asste-item>
-        <a-asste-item id="paintwall4" src="SR2-Assets/paintwall4.jpg"></a-asste-item>
-        <a-asste-item id="monalisa" src="SR2-Assets/monalisa.jpg"></a-asste-item>
-        <a-asste-item id="tile" src="SR2-Assets/tile.jpg"></a-asste-item>
-        <a-asste-item id="earring" src="SR2-Assets/earring.jpg"></a-asste-item>
-        <a-asste-item id="klimt" src="SR2-Assets/klimt.jpg"></a-asste-item>
-        <a-asste-item id="canvas" src="SR2-Assets/canvas3.jpg"></a-asste-item>
+        <a-asste-item id="paintwall" src="316967.jpg"></a-asste-item>
+        <a-asste-item id="paintwall2" src="paintwall2.jpg"></a-asste-item>
+        <a-asste-item id="paintwall3" src="paintwall3.jpg"></a-asste-item>
+        <a-asste-item id="paintwall4" src="paintwall4.jpg"></a-asste-item>
+        <a-asste-item id="monalisa" src="monalisa.jpg"></a-asste-item>
+        <a-asste-item id="tile" src="tile.jpg"></a-asste-item>
+        <a-asste-item id="earring" src="earring.jpg"></a-asste-item>
+        <a-asste-item id="klimt" src="klimt.jpg"></a-asste-item>
+        <a-asste-item id="canvas" src="canvas3.jpg"></a-asste-item>
 
 
-        <a-asste-item id="formroller-obj" src="SR2-Assets/formroller1.obj"></a-asste-item>
-        <a-asste-item id="formroller-mtl" src="SR2-Assets/formroller1.mtl"></a-asste-item>
-        <a-asste-item id="broom-obj" src="SR2-Assets/broom1.obj"></a-asste-item>
-        <a-asste-item id="broom-mtl" src="SR2-Assets/broom1.mtl"></a-asste-item>
-        <a-asste-item id="notebook-obj" src="SR2-Assets/notebook1.obj"></a-asste-item>
-        <a-asste-item id="notebook-mtl" src="SR2-Assets/notebook1.mtl"></a-asste-item>
-        <a-asste-item id="shoe-obj" src="SR2-Assets/shoe1.obj"></a-asste-item>
-        <a-asste-item id="shoe-mtl" src="SR2-Assets/shoe1.mtl"></a-asste-item>
+        <a-asste-item id="formroller-obj" src="formroller1.obj"></a-asste-item>
+        <a-asste-item id="formroller-mtl" src="formroller1.mtl"></a-asste-item>
+        <a-asste-item id="broom-obj" src="broom1.obj"></a-asste-item>
+        <a-asste-item id="broom-mtl" src="broom1.mtl"></a-asste-item>
+        <a-asste-item id="notebook-obj" src="notebook1.obj"></a-asste-item>
+        <a-asste-item id="notebook-mtl" src="notebook1.mtl"></a-asste-item>
+        <a-asste-item id="shoe-obj" src="shoe1.obj"></a-asste-item>
+        <a-asste-item id="shoe-mtl" src="shoe1.mtl"></a-asste-item>
   </a-assets>
 
  <!--  <a-entity camera look-controls>
