--- a/SRproject2.html
+++ b/SRproject2.html
@@ -108,7 +108,7 @@ AFRAME.registerComponent('notebook', {
                       shadow="true"
 
                       animation="property: position; fuse: true; startEvents: fusing ; to: 0 3 -6.9; dur: 1500; easing: linear;  loop: 1"
-
+animation__2="property: rotation; dur: 1000; to: 0 90 0; loop: 1">
                       
                       >	
                       </a-entity>
